trawlmetrics 0.1.00 (July 15, 2025)
----------------------------------------------------------------

- sor_setup_directory: Filter pings by DATUM_CODE.


trawlmetrics 0.0.10 (July 15, 2025)
----------------------------------------------------------------

- sor_setup_directory: Improve handling of hauls without key 
  event data.


trawlmetrics 0.0.9 (March 25, 2025)
----------------------------------------------------------------

- Additional bridle angle of attack corrections for the proto-
  type trawl.


trawlmetrics 0.0.8 (March 14, 2025)
----------------------------------------------------------------

- Add EBS slope to built-in data.
  

trawlmetrics 0.0.7 (March 7, 2025)
----------------------------------------------------------------

- Corrected bridle angle of attack and door spread from flume 
  tank experiments.


trawlmetrics 0.0.6 (February 24, 2025)
----------------------------------------------------------------

IMPROVEMENTS

- Added additional flume tank data.


trawlmetrics 0.0.5 (February 19, 2025)
----------------------------------------------------------------

IMPROVEMENTS

- Added historical total catch weight to the built-in data.


NEW FUNCTIONALITY

- Add netmind_to_marport() function to convert Netmind spread to
  Marport spread values.


trawlmetrics 0.0.4 (January 10, 2025)
----------------------------------------------------------------

IMPROVEMENTS

- Added historical height and spread data as built-in data.

trawlmetrics 0.0.3 (September 27, 2024)
----------------------------------------------------------------

IMPROVEMENTS

- Add vessel speed in knots and other fields to get_trawlmetrics() 
  output.


trawlmetrics 0.0.2 (September 26, 2024)
----------------------------------------------------------------

IMPROVEMENTS 

- Improve ODBC handling in get_trawlmetrics().
- Add DISTANCE_FISHED and DURATION to get_trawlmetrics() output.

trawlmetrics 0.0.1 (September 25, 2024)